infrastructure/cdk.out.synth/VpcStack.template.json
{
 "Resources": {
  "NipunaVpc05A6592F": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/NipunaVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/NipunaVpc/Resource"
   }
  },
  "NipunaVpcpublicSubnet1Subnet14D7F154": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-south-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/NipunaVpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NipunaVpc05A6592F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/NipunaVpc/publicSubnet1/Subnet"
   }
  },
  "NipunaVpcpublicSubnet1RouteTableB9A0AB50": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/NipunaVpc/publicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NipunaVpc05A6592F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/NipunaVpc/publicSubnet1/RouteTable"
   }
  },
  "NipunaVpcpublicSubnet1RouteTableAssociation0F9E8FDB": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NipunaVpcpublicSubnet1RouteTableB9A0AB50"
    },
    "SubnetId": {
     "Ref": "NipunaVpcpublicSubnet1Subnet14D7F154"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/NipunaVpc/publicSubnet1/RouteTableAssociation"
   }
  },
  "NipunaVpcpublicSubnet1DefaultRouteA1870DAE": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "NipunaVpcIGW1689FCB2"
    },
    "RouteTableId": {
     "Ref": "NipunaVpcpublicSubnet1RouteTableB9A0AB50"
    }
   },
   "DependsOn": [
    "NipunaVpcVPCGW0C166288"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcStack/NipunaVpc/publicSubnet1/DefaultRoute"
   }
  },
  "NipunaVpcpublicSubnet1EIP7ABB624C": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/NipunaVpc/publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/NipunaVpc/publicSubnet1/EIP"
   }
  },
  "NipunaVpcpublicSubnet1NATGateway04C99D7E": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "NipunaVpcpublicSubnet1EIP7ABB624C",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "NipunaVpcpublicSubnet1Subnet14D7F154"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/NipunaVpc/publicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "NipunaVpcpublicSubnet1DefaultRouteA1870DAE",
    "NipunaVpcpublicSubnet1RouteTableAssociation0F9E8FDB"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcStack/NipunaVpc/publicSubnet1/NATGateway"
   }
  },
  "NipunaVpcpublicSubnet2Subnet9952C312": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-south-1b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/NipunaVpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NipunaVpc05A6592F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/NipunaVpc/publicSubnet2/Subnet"
   }
  },
  "NipunaVpcpublicSubnet2RouteTable4B242E6B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/NipunaVpc/publicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NipunaVpc05A6592F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/NipunaVpc/publicSubnet2/RouteTable"
   }
  },
  "NipunaVpcpublicSubnet2RouteTableAssociation88E4F174": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NipunaVpcpublicSubnet2RouteTable4B242E6B"
    },
    "SubnetId": {
     "Ref": "NipunaVpcpublicSubnet2Subnet9952C312"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/NipunaVpc/publicSubnet2/RouteTableAssociation"
   }
  },
  "NipunaVpcpublicSubnet2DefaultRoute67FDB958": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "NipunaVpcIGW1689FCB2"
    },
    "RouteTableId": {
     "Ref": "NipunaVpcpublicSubnet2RouteTable4B242E6B"
    }
   },
   "DependsOn": [
    "NipunaVpcVPCGW0C166288"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcStack/NipunaVpc/publicSubnet2/DefaultRoute"
   }
  },
  "NipunaVpcprivateSubnet1SubnetA7930318": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-south-1a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/NipunaVpc/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NipunaVpc05A6592F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/NipunaVpc/privateSubnet1/Subnet"
   }
  },
  "NipunaVpcprivateSubnet1RouteTable02C2E4BE": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/NipunaVpc/privateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NipunaVpc05A6592F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/NipunaVpc/privateSubnet1/RouteTable"
   }
  },
  "NipunaVpcprivateSubnet1RouteTableAssociation80B00BEA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NipunaVpcprivateSubnet1RouteTable02C2E4BE"
    },
    "SubnetId": {
     "Ref": "NipunaVpcprivateSubnet1SubnetA7930318"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/NipunaVpc/privateSubnet1/RouteTableAssociation"
   }
  },
  "NipunaVpcprivateSubnet1DefaultRouteB70A65A9": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "NipunaVpcpublicSubnet1NATGateway04C99D7E"
    },
    "RouteTableId": {
     "Ref": "NipunaVpcprivateSubnet1RouteTable02C2E4BE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/NipunaVpc/privateSubnet1/DefaultRoute"
   }
  },
  "NipunaVpcprivateSubnet2Subnet88B44C3C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-south-1b",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/NipunaVpc/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NipunaVpc05A6592F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/NipunaVpc/privateSubnet2/Subnet"
   }
  },
  "NipunaVpcprivateSubnet2RouteTableD7625F03": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/NipunaVpc/privateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NipunaVpc05A6592F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/NipunaVpc/privateSubnet2/RouteTable"
   }
  },
  "NipunaVpcprivateSubnet2RouteTableAssociation49A9B0C4": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NipunaVpcprivateSubnet2RouteTableD7625F03"
    },
    "SubnetId": {
     "Ref": "NipunaVpcprivateSubnet2Subnet88B44C3C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/NipunaVpc/privateSubnet2/RouteTableAssociation"
   }
  },
  "NipunaVpcprivateSubnet2DefaultRoute20B02DA4": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "NipunaVpcpublicSubnet1NATGateway04C99D7E"
    },
    "RouteTableId": {
     "Ref": "NipunaVpcprivateSubnet2RouteTableD7625F03"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/NipunaVpc/privateSubnet2/DefaultRoute"
   }
  },
  "NipunaVpcisolatedSubnet1SubnetC9E6E261": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-south-1a",
    "CidrBlock": "10.0.4.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/NipunaVpc/isolatedSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NipunaVpc05A6592F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/NipunaVpc/isolatedSubnet1/Subnet"
   }
  },
  "NipunaVpcisolatedSubnet1RouteTable3DD404B9": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/NipunaVpc/isolatedSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "NipunaVpc05A6592F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/NipunaVpc/isolatedSubnet1/RouteTable"
   }
  },
  "NipunaVpcisolatedSubnet1RouteTableAssociation937BD2CC": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NipunaVpcisolatedSubnet1RouteTable3DD404B9"
    },
    "SubnetId": {
     "Ref": "NipunaVpcisolatedSubnet1SubnetC9E6E261"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/NipunaVpc/isolatedSubnet1/RouteTableAssociation"
   }
  },
  "NipunaVpcisolatedSubnet2SubnetB684A8F2": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-south-1b",
    "CidrBlock": "10.0.5.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "isolated"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "VpcStack/NipunaVpc/isolatedSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NipunaVpc05A6592F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/NipunaVpc/isolatedSubnet2/Subnet"
   }
  },
  "NipunaVpcisolatedSubnet2RouteTable96F9A3E1": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/NipunaVpc/isolatedSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "NipunaVpc05A6592F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/NipunaVpc/isolatedSubnet2/RouteTable"
   }
  },
  "NipunaVpcisolatedSubnet2RouteTableAssociation0AA5575B": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "NipunaVpcisolatedSubnet2RouteTable96F9A3E1"
    },
    "SubnetId": {
     "Ref": "NipunaVpcisolatedSubnet2SubnetB684A8F2"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/NipunaVpc/isolatedSubnet2/RouteTableAssociation"
   }
  },
  "NipunaVpcIGW1689FCB2": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcStack/NipunaVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/NipunaVpc/IGW"
   }
  },
  "NipunaVpcVPCGW0C166288": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "NipunaVpcIGW1689FCB2"
    },
    "VpcId": {
     "Ref": "NipunaVpc05A6592F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/NipunaVpc/VPCGW"
   }
  },
  "AlbSecurityGroup86A59E99": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "VpcStack/AlbSecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "from 0.0.0.0/0:443",
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "VpcId": {
     "Ref": "NipunaVpc05A6592F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/AlbSecurityGroup/Resource"
   }
  },
  "EcsSecurityGroup44008BF1": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "VpcStack/EcsSecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "NipunaVpc05A6592F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/EcsSecurityGroup/Resource"
   }
  },
  "EcsSecurityGroupfromVpcStackAlbSecurityGroupCE60AE768000C1E4A2E1": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "from VpcStackAlbSecurityGroupCE60AE76:8000",
    "FromPort": 8000,
    "GroupId": {
     "Fn::GetAtt": [
      "EcsSecurityGroup44008BF1",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "AlbSecurityGroup86A59E99",
      "GroupId"
     ]
    },
    "ToPort": 8000
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/EcsSecurityGroup/from VpcStackAlbSecurityGroupCE60AE76:8000"
   }
  },
  "RdsSecurityGroup632A77E4": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "VpcStack/RdsSecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "NipunaVpc05A6592F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/RdsSecurityGroup/Resource"
   }
  },
  "RdsSecurityGroupfromVpcStackEcsSecurityGroup925C765F543243EB980A": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "from VpcStackEcsSecurityGroup925C765F:5432",
    "FromPort": 5432,
    "GroupId": {
     "Fn::GetAtt": [
      "RdsSecurityGroup632A77E4",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "EcsSecurityGroup44008BF1",
      "GroupId"
     ]
    },
    "ToPort": 5432
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/RdsSecurityGroup/from VpcStackEcsSecurityGroup925C765F:5432"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/32OQWvCQBCFf4v3zVYWSs8iIrm0ISley2Qd7WicDTszBhH/u0SLufX03nw8hi/48P7h5zMYpIjbY9FR66+NQjw6GOQHY/DXTR/dcsebaukqazuKjbWMOrKp1ckUv6HtcOITW4ikSKCU+DUey6qsxvgEXYPiABdXZTqD4vS4ZMXM+Bo8Tf6uhSrE3xOyugajZdLLOifrHw7/gpL3GUVurkZJluND58u0N705Tlv0B3k7h+BD8PPZQYiKbKx0Ql8/8w6KgTv/OwEAAA=="
   },
   "Metadata": {
    "aws:cdk:path": "VpcStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "VpcId": {
   "Value": {
    "Ref": "NipunaVpc05A6592F"
   }
  },
  "ExportsOutputRefNipunaVpcisolatedSubnet1SubnetC9E6E261FEB0E74E": {
   "Value": {
    "Ref": "NipunaVpcisolatedSubnet1SubnetC9E6E261"
   },
   "Export": {
    "Name": "VpcStack:ExportsOutputRefNipunaVpcisolatedSubnet1SubnetC9E6E261FEB0E74E"
   }
  },
  "ExportsOutputRefNipunaVpcisolatedSubnet2SubnetB684A8F2AD176A7C": {
   "Value": {
    "Ref": "NipunaVpcisolatedSubnet2SubnetB684A8F2"
   },
   "Export": {
    "Name": "VpcStack:ExportsOutputRefNipunaVpcisolatedSubnet2SubnetB684A8F2AD176A7C"
   }
  },
  "ExportsOutputFnGetAttRdsSecurityGroup632A77E4GroupId9D343172": {
   "Value": {
    "Fn::GetAtt": [
     "RdsSecurityGroup632A77E4",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "VpcStack:ExportsOutputFnGetAttRdsSecurityGroup632A77E4GroupId9D343172"
   }
  },
  "ExportsOutputRefNipunaVpc05A6592F24A3380F": {
   "Value": {
    "Ref": "NipunaVpc05A6592F"
   },
   "Export": {
    "Name": "VpcStack:ExportsOutputRefNipunaVpc05A6592F24A3380F"
   }
  },
  "ExportsOutputRefNipunaVpcpublicSubnet1Subnet14D7F154E8FD32AC": {
   "Value": {
    "Ref": "NipunaVpcpublicSubnet1Subnet14D7F154"
   },
   "Export": {
    "Name": "VpcStack:ExportsOutputRefNipunaVpcpublicSubnet1Subnet14D7F154E8FD32AC"
   }
  },
  "ExportsOutputRefNipunaVpcpublicSubnet2Subnet9952C312ECC6886A": {
   "Value": {
    "Ref": "NipunaVpcpublicSubnet2Subnet9952C312"
   },
   "Export": {
    "Name": "VpcStack:ExportsOutputRefNipunaVpcpublicSubnet2Subnet9952C312ECC6886A"
   }
  },
  "ExportsOutputRefNipunaVpcprivateSubnet1SubnetA7930318104C3C34": {
   "Value": {
    "Ref": "NipunaVpcprivateSubnet1SubnetA7930318"
   },
   "Export": {
    "Name": "VpcStack:ExportsOutputRefNipunaVpcprivateSubnet1SubnetA7930318104C3C34"
   }
  },
  "ExportsOutputRefNipunaVpcprivateSubnet2Subnet88B44C3CBBA41987": {
   "Value": {
    "Ref": "NipunaVpcprivateSubnet2Subnet88B44C3C"
   },
   "Export": {
    "Name": "VpcStack:ExportsOutputRefNipunaVpcprivateSubnet2Subnet88B44C3CBBA41987"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
